cmake_minimum_required (VERSION 3.0)

project(VRServer)

set(DISK "C")
if(EXISTS "D:/usr/vcpkg")
	set(DISK "D")
endif()

include_directories("${DISK}:/usr/include" "${DISK}:/usr/vcpkg/installed/x64-windows/include" "${DISK}:/usr/vcpkg/installed/x64-windows/include/boost")
link_directories("${DISK}:/usr/lib/opensg" "${DISK}:/usr/vcpkg/installed/x64-windows/lib")

add_executable(VRServer VRServer.cpp)
target_link_libraries(VRServer OSGBase )
target_link_libraries(VRServer OSGContribTrapezoidalShadowMaps )
target_link_libraries(VRServer OSGCluster )
target_link_libraries(VRServer OSGDrawable )
target_link_libraries(VRServer OSGEffectGroups )
target_link_libraries(VRServer OSGGroup )
target_link_libraries(VRServer OSGImageFileIO )
target_link_libraries(VRServer OSGState )
target_link_libraries(VRServer OSGSystem )
target_link_libraries(VRServer OSGUtil )
target_link_libraries(VRServer OSGText )
target_link_libraries(VRServer OSGWindow )
target_link_libraries(VRServer OSGWindowGLUT )
#target_link_libraries(VRServer OSGWindowX )
#target_link_libraries(VRServer GLU )
#target_link_libraries(VRServer GL )
#target_link_libraries(VRServer SM )
#target_link_libraries(VRServer ICE )
#target_link_libraries(VRServer X11 )
#target_link_libraries(VRServer Xext )
target_link_libraries(VRServer freeglut )
#target_link_libraries(VRServer Xmu )
#target_link_libraries(VRServer Xi)
target_link_libraries(VRServer boost_system-vc140-mt boost_filesystem-vc140-mt)